# plasma-applet-display-config-switcher

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
package/: metadata.json
package/contents/code/: profiles.mjs  profiles.test.mjs
package/contents/config/: main.xml
package/contents/ui/: main.qml
